adding minor configurations on .env, adding automatic composer install on build and forcing laravel to response with json on response

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,9 @@
 version: '3.7'
 services:
   tickat-php:
-    build: ./docker/dev/php-fpm
+    build:
+      context: .
+      dockerfile: ./docker/dev/php-fpm/Dockerfile
     container_name: tickat-php
     volumes:
       - ./:/var/www/html
